chore: ignore .NET build artifacts (bin/ obj/, .vs, .vscode)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# macOS
 .DS_Store
+
+# Visual Studio / .NET
+.vs/
+.vscode/
+*.user
+*.suo
+*.userosscache
+*.sln.ide
+
+# Common build outputs
+bin/
+obj/
+**/bin/
+**/obj/
+
+# NuGet / packages
+*.nupkg
+*.snupkg
+*.nuspec
+packages/
+
+# Binaries
+*.dll
+*.exe
+*.pdb
+
+# Misc
+*.log
+*.slnx
